# gehenna-api

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  NOTES.txt  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run_all.sh  session-ses_15dd.md
docs/: DEVELOPMENT_TRENDS.md  KRCG_ANALYSIS.md  api-reference.md  architecture.md  deck-262-guia-rapido.md  dev-notes.md  development.md  engine-checklist.md  game-engine-checklist.md  game-engine.md  getting-started.md  implementacao_web_flask.md  impulse-system-spec.md  index.md  krcg-integration.md  turnos-simulador.md  web-ui.md
docs/games-rules/: 02-card-types-crypt.md  04-playing-the-game.md  06-unlock-and-master-phases.md  08-combat.md  09-diablerie-and-referendums.md  10-influence-and-discard-phases.md  13-glossary.md
docs/raw/: README.md
docs/rules/: 01-introduction.md  03-card-types-library.md  05-turn-sequence.md  07-minion-phase-actions.md  11-ending-the-game.md  12-vampire-sects.md  14-faq-and-rulings.md  15-quick-reference.md  index.md
gehenna_api/: app.py  config.py  database.py  models.py  schemas.py  security.py  settings.py
gehenna_api/data/: vtes_lookup.json
gehenna_api/data/cards/: impulse_registry.py  manual_overrides.py
gehenna_api/data/cards/crypt/: 200001.json  200002.json  200003.json  200004.json  200005.json  200006.json  200007.json  200008.json  200009.json  200010.json  200011.json  200012.json  200013.json  200014.json  200015.json  200016.json  200017.json  200018.json  200019.json  200020.json  200021.json  200022.json  200023.json  200024.json  200025.json  200026.json  200027.json  200028.json  200029.json  200030.json  200031.json  200032.json  200033.json  200034.json  200035.json  200036.json  200037.json  200038.json  200039.json  200040.json  (+1683 more)
gehenna_api/data/cards/overrides/: 100059.json  100065.json  100131.json  100297.json  100366.json  100374.json  100519.json  100545.json  100588.json  100680.json  100687.json  100809.json  100824.json  100903.json  100904.json  100972.json  101014.json  101056.json  101238.json  101321.json  101353.json  101417.json  101663.json  101781.json  101896.json  101949.json  102113.json  102121.json  102137.json  102180.json  102207.json  102221.json  102224.json  102231.json  102232.json  102233.json  102270.json  __init__.py
gehenna_api/data/decks/: 174.json  241.json  242.json  244.json  249.json  257.json
gehenna_api/engine/: actions.py  card_instance.py  card_loader.py  cli.py  combat.py  engine.py  events.py  phases.py  server.py  state.py
gehenna_api/engine/ai/: base.py  random_bot.py
gehenna_api/engine/cardtext/: __init__.py  models.py  parser.py
gehenna_api/models/: auth.py  base.py  card.py  deck.py  item.py  moviment.py  slot.py  tournament.py
gehenna_api/routes/: auth.py  cards.py  decks.py  slots.py  stocks.py  tournaments.py  trends.py  users.py
gehenna_api/services/: base.py  cards.py  decks.py  moviments.py  stocks.py  users.py
gehenna_api/utils/: parameters.py  sources.py  vdb.py
gehenna_web/: app.py  config.py  requirements.txt  run.py
gehenna_web/routes/: auth.py  cards.py  decks.py  items.py  moviments.py  slots.py  tournaments.py  trends.py  users.py
gehenna_web/services/: api_client.py
gehenna_web/static/css/: style.css  theme.css
gehenna_web/static/js/: app.js  autocomplete.js  cache.js  cards.js  theme-toggle.js
gehenna_web/templates/: base.html  index.html
gehenna_web/templates/auth/: login.html  register.html
gehenna_web/templates/cards/: detail.html  search.html
gehenna_web/templates/components/: breadcrumb.html  modal_confirm.html
gehenna_web/templates/decks/: detail.html  form.html  import.html  import_vdb.html  list.html  missing.html
gehenna_web/templates/items/: form.html  list.html
gehenna_web/templates/moviments/: detail.html  form.html  list.html  statistics.html
gehenna_web/templates/slots/: form.html  list.html
gehenna_web/templates/tournaments/: detail.html  form.html  list.html  local_meta.html
gehenna_web/templates/trends/: deck_detail.html  meta.html  recommendations.html
gehenna_web/templates/users/: form.html  list.html  profile.html
migrations/: env.py
migrations/versions/: 2ac76c6d1bc4_coluna_code_em_moviments.py  49cff73f05c6_tabela_items.py  6141b4c74457_create_cards_table.py  6e246bcd5009_add_column_tipo_in_cards_table.py  76f23795128f_criar_campo_avancado_em_cartas.py  78437d4c7122_create_moviments_table.py  add_tags_to_decks.py  ae6e29eb2a7f_column_owner_em_moviments.py  b54e8bf3f8ec_campo_para_guardar_código_vdb.py  b93635a06706_tabela_decks.py  cb516cb762fd_tabela_slots.py  cf089a457a4a_updated_null.py  create_tournament_tables.py  enriquecer_cartas_motor_jogo.py  f4133bab9541_create_users_table.py
scripts/: atribuir_vdb_cripta.py  atribuir_vdb_lib.py  atualizar_cartas_com_novos_campos.py  cadastrar_novas_cartas.py  codevdb.py  manage_decks.py  nao_encontradas_cripta.py  parse_all_cards.py  shell.py  update_infernal_flag.py  validate_cards.py  vdb.py
tests/: conftest.py  test_app.py  test_db.py  test_game_engine.py  test_security.py
