[project]
name = "gehenna-api"
version = "0.1.0"
description = "API Rest para gerenciamento de coleções e decks de V:TES"
authors = [{ name = "Claudio Torcato", email = "claudiotorcato@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.100.1,<0.101",
    "uvicorn>=0.23.2,<0.24",
    "pydantic[email]>=2.1.1,<3",
    "sqlalchemy>=2.0.19,<3",
    "pydantic-settings>=2.0.2,<3",
    "alembic>=1.11.2,<2",
    "python-jose[cryptography]>=3.3.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-multipart>=0.0.6,<0.0.7",
    "tinydb>=4.8.0,<5",
    "bump-pydantic>=0.8.0,<0.9",
    "requests>=2.32.3,<3",
    "pyjsonq>=1.0.2,<2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "taskipy>=1.12.0,<2",
    "blue>=0.9.1,<0.10",
    "ruff>=0.0.282,<0.0.283",
    "httpx>=0.24.1,<0.25",
    "isort>=5.12.0,<6",
    "pytest-cov>=4.1.0,<5",
]

[tool.uv]
default-groups = "all"

# [build-system]
# requires = ["uv_build>=0.10.0,<0.11.0"]
# build-backend = "uv_build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
server = 'uvicorn gehenna_api.app:app --port=8002 --host=0.0.0.0 --reload'
stop = 'lsof -t -i:8002 | xargs -r kill -9; lsof -t -i:5000 | xargs -r kill -9; echo "Stopped services on ports 8002 and 5000"'
pre_test = 'task lint'
test = 'pytest -s -x --cov=gehenna_api -vv'
post_test = 'coverage html'
web = 'uv run uvicorn gehenna_api.app:app --port=8002 --host=0.0.0.0 --reload & uv run python gehenna_web/run.py'
