[project]
name = "gehenna-api"
version = "0.3.1"
description = "API Rest e Web UI para gerenciamento de coleções e decks de V:TES"
authors = [{ name = "Claudio Torcato", email = "claudiotorcato@gmail.com" }]
requires-python = ">=3.12,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.100.1",
    "uvicorn>=0.23.2",
    "pydantic[email]>=2.1.1,<3",
    "sqlalchemy>=2.0.19,<3",
    "pydantic-settings>=2.0.2,<3",
    "alembic>=1.11.2,<2",
    "python-jose[cryptography]>=3.3.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-multipart>=0.0.6,<0.0.7",
    "tinydb>=4.8.0,<5",
    "bump-pydantic>=0.8.0,<0.9",
    "requests>=2.32.3,<3",
    "pyjsonq>=1.0.2,<2",
    # Web UI (Flask)
    "flask>=3.0.0,<4",
    "flask-wtf>=1.2.1,<2",
    "wtforms>=3.1.1,<4",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "taskipy>=1.12.0,<2",
    "ruff>=0.0.282",
    "httpx>=0.24.1,<0.25",
    "isort>=5.12.0,<6",
    "pytest-cov>=4.1.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = 'ruff check .'
format = 'ruff check --fix . && ruff format .'
server = 'python -c "import uvicorn; uvicorn.run(\"gehenna_api.app:app\", host=\"0.0.0.0\", port=8002)"'
web = 'python -m flask --app gehenna_web.app run --port=5000 --debug'
stop = 'lsof -t -i:8002 | xargs -r kill -9; lsof -t -i:5000 | xargs -r kill -9; echo "Stopped"'
pre_test = 'ruff check .'
test = 'pytest -s -x --cov=gehenna_api -vv'
post_test = 'coverage html'
all = 'bash run_all.sh'
